Fix overflowing weather icon

--- a/weather/weather.css
+++ b/weather/weather.css
@@ -63,7 +63,7 @@ body {
 	width: calc(50% + 200px);
     padding-left: 200px;
 	text-align: left;
-	background-size: 196px;
+	background-size: 175px;
 	background-repeat: no-repeat;
 }
 
